added dark mode

--- a/index.html
+++ b/index.html
@@ -376,5 +376,6 @@
       </div>
     </footer>
     <!-- ******* END FOOTER ******* -->
+    <script src="assets/dark-mode.js"></script>
   </body>
 </html>
