changed persons names

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <div class="customer">
               <img src="./assets/images/team1.jpg" alt="testimonial 3" />
               <div class="customer-text">
-                <h3>Person Name</h3>
+                <h3>Sonya Sharleen</h3>
                 <p>Co-founder at Company</p>
               </div>
             </div>
@@ -290,7 +290,7 @@
             <div class="customer">
               <img src="./assets/images/team2.jpg" alt="testimonial 3" />
               <div class="customer-text">
-                <h3>Person Name</h3>
+                <h3>Garry Kamden</h3>
                 <p>Co-founder at Company</p>
               </div>
             </div>
@@ -306,7 +306,7 @@
             <div class="customer">
               <img src="./assets/images/team3.jpg" alt="testimonial 3" />
               <div class="customer-text">
-                <h3>Person Name</h3>
+                <h3>Marion Omar</h3>
                 <p>Co-founder at Company</p>
               </div>
             </div>
